src/objects/Quote_Approver_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
                <value>
                    <fullName>Level 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>App TX</fullName>
                </value>
                <value>
                    <fullName>PCFS</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>Transformation</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Enablement</fullName>
                </value>
                <value>
                    <fullName>Engagement Director</fullName>
                </value>
                <value>
                    <fullName>APLE</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>CSO</fullName>
                </value>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Royalty</fullName>
                </value>
                <value>
                    <fullName>SAAS</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Hierarchy__c</fullName>
        <label>Approver Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Approver</fullName>
                </value>
                <value>
                    <fullName>1st Manager</fullName>
                </value>
                <value>
                    <fullName>2nd Manager</fullName>
                </value>
                <value>
                    <fullName>3rd Manager</fullName>
                </value>
                <value>
                    <fullName>4th Manager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Primary Approver</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Approver_Mappings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Approver_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Limit__c</fullName>
        <label>Discount Limit</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_CC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email CC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Approver_Mappings4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lab_Office__c</fullName>
        <label>Lab Office</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                    <isActive>false</isActive>
                    <label>London</label>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                    <isActive>false</isActive>
                    <label>Tokyo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lab_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Santa Monica</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Dublin</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Approver_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Discount_Limit__c</fullName>
        <label>Primary Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <formula>TEXT( Services__c ) + '##' + TEXT( Approval_Type__c )</formula>
        <label>Product Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services/Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSO</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Approver_Mappings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Limit__c</fullName>
        <label>VP Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Approver Mapping</label>
    <nameField>
        <displayFormat>QAM-{00000}</displayFormat>
        <label>Quote Approver Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approver Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Services__c</columns>
        <columns>Approval_Type__c</columns>
        <columns>Discount_Limit__c</columns>
        <columns>Region__c</columns>
        <columns>Office__c</columns>
        <columns>Approver_Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Approval_Level__c</columns>
        <columns>Email_CC__c</columns>
        <columns>Lab_Office__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Product_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>